# ferric_continuum

./: .bazelrc  .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.ci  ENGINEERING.md  GITHUB_HOSTING_SETUP.md  GITHUB_QUICKSTART.md  GITHUB_SETUP_SUMMARY.md  LICENSE  MODULE.bazel  QUICKSTART.md  README.md  SECURITY.md  TEST_COVERAGE_SUMMARY.md  clippy.toml  docker-ci-test.sh  requirements.txt  requirements_lock.txt  rustfmt.toml
.github/: CODEOWNERS  README.md  SUPPORT.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  labeler.yml  release.yml
ferric_continuum/: BUILD.bazel
ferric_continuum/foundation/: BUILD.bazel  README.md  constructor_rules.cc  constructor_rules.hh  constructor_rules_demo.cc  constructor_rules_test.cc  move_semantics.cc  move_semantics.hh  move_semantics.rs  move_semantics_demo.cc  move_semantics_demo.rs  move_semantics_test.cc  parameter_passing.cc  parameter_passing.hh  parameter_passing.rs  parameter_passing_demo.cc  parameter_passing_demo.rs  parameter_passing_test.cc  smart_pointers.cc  smart_pointers.hh  smart_pointers.rs  smart_pointers_demo.cc  smart_pointers_demo.rs  smart_pointers_test.cc  value_semantics.cc  value_semantics.hh  value_semantics.rs  value_semantics_demo.cc  value_semantics_demo.rs  value_semantics_test.cc
ferric_continuum/hello/: BUILD.bazel  README.md  hello.cc  hello.rs  hello_lib.cc  hello_lib.hh  hello_lib.rs  hello_lib_test.cc
scripts/: format.sh  lint.sh  setup-colima.sh  verify_github_setup.sh
